--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,9 +4,8 @@
 @tailwind utilities;
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
 
   font-weight: normal;
 }
@@ -29,7 +28,4 @@ a,
     display: flex;
   }
 
-  #app {
-    padding: 0 2rem;
-  }
 }
