--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,8 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --vt-c-primary-text: rgba(0, 0, 0, 0.9);
 }
 
 /* semantic color variables for this project */
@@ -47,6 +49,8 @@
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
+
+    --vt-c-primary-text: rgba(255, 255, 255, 0.9);
   }
 }
 
